--- a/project.config.json
+++ b/project.config.json
@@ -83,7 +83,7 @@
         {
           "name": "pages/visitorManager/add",
           "pathName": "pages/visitorManager/add",
-          "query": "source=2&roomId=1247914483574116354&villageId=1247836573886582785&villageName=万科红郡一期",
+          "query": "source=2&roomId=1331803925681074177&villageId=1331540520937197569&villageName=义和家园西区",
           "scene": null
         }
       ]
